# Apple

./: .gitignore  pyproject.toml
Apple/: settings.py  swagger.py  urls.py
api/: swagger.py  urls.py  views.py
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
locale/uz/LC_MESSAGES/: django.po
orders/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
utils/: translation.py
